k8s/newrelic/k8s-integration/k8s-metadata-injection-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newrelic-metadata-injection-deployment
  namespace: default
  labels:
    app: newrelic-metadata-injection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newrelic-metadata-injection
  template:
    metadata:
      labels:
        app: newrelic-metadata-injection
    spec:
      serviceAccountName: newrelic-metadata-injection-service-account
      containers:
      - name: metadata-injector
        image: newrelic/k8s-metadata-injection:1.1.0
        volumeMounts:
        - name: tls-key-cert-pair
          mountPath: /etc/tls-key-cert-pair
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 1
      volumes:
      - name: tls-key-cert-pair
        secret:
          secretName: newrelic-metadata-injection-secret
---
apiVersion: v1
kind: Service
metadata:
  name: newrelic-metadata-injection-svc
  namespace: default
  labels:
    app: newrelic-metadata-injection
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: newrelic-metadata-injection
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: newrelic-metadata-injection-cfg
  labels:
    app: newrelic-metadata-injection
webhooks:
- name: metadata-injection.newrelic.com
  clientConfig:
    service:
      name: newrelic-metadata-injection-svc
      namespace: default
      path: "/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lJYU82UTBhZHJUOW93RFFZSktvWklodmNOQVFFTEJRQXdGVEVUTUJFR0ExVUUKQXhNS2EzVmlaWEp1WlhSbGN6QWVGdzB5TXpBNU1UWXhNVEUxTVRaYUZ3MHpNekE1TVRNeE1URTFNVFphTUJVeApFekFSQmdOVkJBTVRDbXQxWW1WeWJtVjBaWE13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLCkFvSUJBUUNkSmhNUlBwbjhHNy9DN0NyNlVnaEFyVmZqa3RwTTRlc2RrQVYvTURVOFlaMVlTTm52ZlVrN3pjeG0KeUF1QVFWRFlmaTNQOHRRZmo5NmRVRlJLb1lrMW1oTE5heFhvMDNzakhaeG9WK2RzSllEcXE4M1JvNkJLaDJBNApUdzc2bDRTZ2RacE [...]
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  failurePolicy: Ignore
